# debaser

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  debaser.repo  debaser.sources  public.gpg
.github/scripts/: propose_release.py
.github/workflows/: ci.yml  publish.yml  release.yml  rust.yml
apt/dists/stable/: InRelease  Release  Release.gpg
apt/dists/stable/main/binary-amd64/: Packages  Release
apt/pool/main/d/debaser/: debaser_0.1.11-1_amd64.deb
docs/: packaging.md
packaging/homebrew/: README.md
packaging/winget/: README.md
rpm/: debaser-0.1.11-1.x86_64.rpm
rpm/repodata/: 87284409770d16cb85c590f15c1a6474c61521d865996cda6f00217c9f7b1fe1-filelists.sqlite.bz2  b1fa3299c7a33e017993f6e87bfc4fcc7aca9c685c9e54bc1b1c13bb32976122-other.sqlite.bz2  c226dd1fc3e8a6bbefa816b00ff1e9b0ae35aa46de9218421ded2ad2b1a99aa0-primary.sqlite.bz2  repomd.xml  repomd.xml.asc
scripts/packaging/: build-apt-repo.sh  build-deb.sh  build-rpm-repo.sh  build-rpm.sh  generate-homebrew-formula.sh  generate-winget-manifests.sh
scripts/release/: bump-version.py
src/: cli.rs  lib.rs  main.rs  sha.rs
src/generator/: data.rs  mod.rs
